<resources>
    <string name="app_name">Ioter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_search"/>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="guide_1">全新改版</string>
    <string name="guide_2">视频购物</string>
    <string name="guide_3">评价晒图</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="stop">结束</string>
    <string name="uhf_please_stop">请先停止读标签!</string>
    <string name="uhf_low_power_info">电量低,请充电!</string>
    <string name="uhf_low_power_consumption">副电点亮低， 是否切换到主电池?</string>

    <string name="user_name">用户名</string>
    <string name="user_password">密	码</string>
    <string name="number">序号</string>
    <string name="EPC">EPC</string>
    <string name="shelf">货架</string>
    <string name="setting">设置</string>
    <string name="versions">版本</string>
    <string name="power">功率</string>
    <string name="frequency">频率</string>
    <string name="base_band_rate">基带速率</string>
    <string name="Qvalue">Q值</string>
    <string name="session">Session</string>
    <string name="get">获取</string>

    <!-- 主页 -->
    <string name="main_out">出库</string>
    <string name="main_in">入库</string>
    <string name="store_in">入店</string>
    <string name="main_check">盘点</string>
    <string name="main_scan">扫描查询</string>
    <string name="main_more">更多</string>

    <!-- 读EPC -->
    <string name="readEpc">读EPC</string>
    <string name="readCount">读取次数</string>
    <string name="Tag_Time">Time:0 S </string>
    <string name="Tag_Count">Total:0</string>
    <string name="Tag_ReadTotalCount">SP:0 T/S</string>
    <string name="back">返回</string>


    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="loading">加载中...</string>
    <string name="empty_data">暂无数据</string>
    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>
    <string name="hot_app">热门应用</string>
    <string name="mobi">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="default_loading">loading</string>

    <string name="app_hopeland">hopeland</string>
    <string name="app_supoin">supoin</string>
    <string name="apps_update">应用切换</string>
    <string name="sys_setting">系统设置</string>
    <string name="logining">正在登陆...</string>
    <string name="logout">退出登录</string>
    <string name="download">下载</string>
    <string name="manage">管理</string>
    <string name="error_token">登录失效，请重新登录</string>
    <string name="accessibility_service_description">智能安装，无需人工操作</string>
    <string name="smart_install">菜鸟手机助手智能安装</string>
    <string name="search_hint">搜索</string>
    <string name="key_auto_check_apk_update">key_auto_check_apk_update</string>
    <string name="key_smart_install">key_smart_install</string>
    <string name="key_auto_delete_apk">key_auto_delete_apk</string>
    <string name="key_root_install">key_root_install</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="key_apk_download_dir">key_apk_download_dir</string>
    <string name="key_about_me">key_about_me</string>
</resources>
