<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_background_color"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.ToolBar"
        app:layout_scrollFlags="scroll|enterAlways"
        app:title="@string/app_name"
        />

    <LinearLayout
        android:id="@+id/setting_llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/common_margin_size">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textColor="@color/common_text_color"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@mipmap/ic_arrow"
            android:src="@mipmap/ic_arrow"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/epc_read_llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/common_margin_size">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/readEpc"
            android:textColor="@color/common_text_color"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@mipmap/ic_arrow"
            android:src="@mipmap/ic_arrow"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/versions_llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/common_margin_size">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/versions"
            android:textColor="@color/common_text_color"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@mipmap/ic_arrow"
            android:src="@mipmap/ic_arrow"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bgaqring_llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_size"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="@dimen/common_margin_size">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="条形码关联"
            android:textColor="@color/common_text_color"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@mipmap/ic_arrow"
            android:src="@mipmap/ic_arrow"/>

    </LinearLayout>

</LinearLayout>
