<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ioter.ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.Toolbar
                android:id="@+id/tool_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/AppTheme.ToolBar"
                app:layout_scrollFlags="scroll|enterAlways"
                app:title="@string/app_name"
                />

            <com.ioter.ui.widget.BannerLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:autoPlayDuration="5000"
                app:indicatorMargin="10dp"
                app:indicatorPosition="centerBottom"
                app:indicatorShape="oval"
                app:indicatorSpace="3dp"
                app:scrollDuration="1100"
                app:selectedIndicatorColor="?attr/colorPrimary"
                app:selectedIndicatorHeight="6dp"
                app:selectedIndicatorWidth="6dp"
                app:unSelectedIndicatorColor="#99ffffff"
                app:unSelectedIndicatorHeight="6dp"
                app:unSelectedIndicatorWidth="6dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/out_rlyt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/out_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:drawableTop="@mipmap/ic_out"
                        android:gravity="center"
                        android:text="@string/main_out"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/in_rlyt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/int_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:drawableTop="@mipmap/ic_int"
                        android:gravity="center"
                        android:text="@string/main_in"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/check_rlyt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/check_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:drawableTop="@mipmap/ic_check"
                        android:gravity="center"
                        android:text="@string/main_check"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/scan_rlyt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/scan_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:drawableTop="@mipmap/ic_check"
                        android:gravity="center"
                        android:text="@string/main_scan"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/more_rlyt"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/more_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:drawableTop="@mipmap/ic_more"
                        android:gravity="center"
                        android:text="@string/main_more"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header"
        app:menu="@menu/menu_left"
        >


    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>
